--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,12 +5,14 @@
   services:
     #container name to be used while creating#
     wedding-frontend:
+      image: ezekielbajada/weddinginvite:frontend
       #the path of dockerfile to be used#
       build: .
       #the ports on which the container be mapped onto#
       ports:
         - "8080:80"
     wedding-backend:
+      image: ezekielbajada/weddinginvite:backend
       #the path of dockerfile to be used#
       build: ../WeddingInviteSiteBackend/WeddingInviteSite
       #the ports on which the container be mapped onto#
