--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,13 +4,13 @@
   #containers which are being built and run#
   services:
     # container name to be used while creating#
-    # wedding-frontend:
-    #   image: ezekielbajada/weddinginvite:frontend
-    #   #the path of dockerfile to be used#
-    #   build: .
-    #   #the ports on which the container be mapped onto#
-    #   ports:
-    #     - "80:80"
+    wedding-frontend:
+      image: ezekielbajada/weddinginvite:frontend
+      #the path of dockerfile to be used#
+      build: .
+      #the ports on which the container be mapped onto#
+      ports:
+        - "80:80"
     wedding-backend:
       image: ezekielbajada/weddinginvite:backend
       #the path of dockerfile to be used#
