--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@
       image: ezekielbajada/weddinginvite:backend
       #the path of dockerfile to be used#
       build: ../WeddingInviteSiteBackend/WeddingInviteSite
+      environment: 
+        - ASPNETCORE_URLS=http://+:8081;http://+:5000
       #the ports on which the container be mapped onto#
       ports:
-        - "8081:80"
+        - "8081:8081"
