--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "angularx-social-login": "^2.2.1",
     "moment": "^2.29.1",
+    "ng-particles": "^3.2.4",
     "ngx-toastr": "^14.2.2",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.5.6",
     "tailwindcss": "^2.2.15",
     "tslib": "^2.3.0",
+    "tsparticles": "^2.2.4",
+    "tsparticles-engine": "^2.2.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
